--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
 
+    "allowSyntheticDefaultImports": true,
     "strict": false,
     "noImplicitAny": true,
 
